--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "type": "git",
     "url": "git+https://github.com/staeco/neighborhood-boundaries.git"
   },
-  "author": "Contra <yo@contra.io> (http://contra.io)",
+  "contributors": [
+    "Contra <yo@contra.io> (http://contra.io)"
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/staeco/neighborhood-boundaries/issues"
